
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Pushed File tree nodes' context menus to JS layer, added Upload Files button to tree toolbar
- Pushed Element tree nodes' context menus to JS layer, similar to Resource Tree optimizations
- [#MODX-1897] Fix Date TemplateVar web output render error in PHP 5.3 due to use of ereg()
- Fixed bug with Quick Update caused by new resource tree js changes
- [#MODX-1848] Allowed parent selector to select contexts as the parent in Resource page
- Pushed Resource tree nodes' context menus to the JS layer, massively decreasing the size of the JSON tree sent in the getNodes processor, vast speeding up tree functionality
- Made publish/unpublish/delete/undelete actions on the tree only change the class of the node, rather than refreshing the node, speeding up workflow
- Pushed modX::getService to xPDO layer 
- [#MODX-1873] Ensure setup redirects use full URL in header
- [#MODX-1887] Adjust default widths for main layout to render panels more consistently
- Optimized modX::getChunk() and modX::runSnippet() by caching instances within a request to modX::$sourceCache
- Modified modX::setDebug(true) to set error_reporting(-1)
- Optimized modLexicon::loadCache
- [#MODX-1824] Fixed bug where duplicate wasnt fully duping resources
- Moved Resource's duplicate method into the model, via modResource::duplicate
- [#MODX-1868] tree_root_id now accepts a comma-delimited list of Resource IDs to restrict by. Works across contexts as well.
- [#MODX-1871] Fixed bug with delimiter TV output render
- Dropped unnecessary ID field on modEvent table and made `name` column PK
- Refactored modX::invokeEvent and modX::getEventMap to take advantage of new plugin event changes