@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-1898] Fix static calls to modX::fromJSON() and modX::toJSON() instance methods (xPDO updated to revision 421)
 - Pushed File tree nodes' context menus to JS layer, added Upload Files button to tree toolbar
 - Pushed Element tree nodes' context menus to JS layer, similar to Resource Tree optimizations
 - [#MODX-1897] Fix Date TemplateVar web output render error in PHP 5.3 due to use of ereg()
